sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:15: error: Unmatched closing brace '}' ignored here
     }
     ^AlgCocktailSort2:23: error: 'while' expected but '}' found.
   } while(fini !=0)
   ^AlgCocktailSort2:23: error: ';' expected but 'while' found.
   } while(fini !=0)
     ^AlgCocktailSort2:27: error: Unmatched closing brace '}' ignored here
}
^